--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#Data source 
+#Indica el driver/lib para conectar java a mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Url donde esta el servicio de tu mysql y el nombre de la base de datos
+spring.datasource.url=jdbc:mysql://b348995f0289fc:27d1861e@eu-cdbr-west-03.cleardb.net/heroku_79cc9820c360a0c?reconnect=true
+
+#Usuario y contrasena para tu base de datos descrita en la linea anterior
+spring.datasource.username=b348995f0289fc
+spring.datasource.password=27d1861e
+
+
+#Imprime en tu consola las instrucciones hechas en tu base de datos.
+#Configuraciones JPA
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+#Puerto del servidor Tomcat
+server.port=3306
 
