--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.open-in-view=true
 #Puerto del servidor Tomcat
 server.port=3306
 
+# Spring Security
+spring.security.user.name=josep
+spring.security.user.password=1234
+
